--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
 }
 
 .box {
+    max-width: 700px;
     margin: auto;
     color: white;
     margin-left: 200px;
@@ -112,8 +113,17 @@ img {
         flex-direction: column;
         align-items: center;
     }
+    .box img {
+        width: 100px;
+    }
+    header {
+        width: 0px;
+    }
+    .box a img {
+        width: 30px;
+    }
     .box {
-        max-width: 600px;
+        max-width: 200px;
         margin-right: 50px;
     }
 }
